syntax = "proto3";

package kaboomproto;
option go_package = "github.com/fsufitch/kaboom/proto/go;kaboomproto";

import "piece.proto";
import "position.proto";
import "visual_hint.proto";

// Effect represents a single "thing that happens in the game".
// Effects are "actionable" elements of the game "state machine".
// Given a game state, you can apply an Effect to get the next state.
message Effect {
    string uuid = 1;
    string board_uuid = 2;
    string why = 3;  // Human-readable reason for the effect; for logging/debugging.


    // The specific effect that occurs.
    oneof effect_oneof {
        Effect__NothingHappens nothing_happens = 10; 
        Effect__PieceCreated piece_created = 30;
        Effect__PieceDeleted piece_deleted = 31;
        Effect__PieceMoved piece_moved = 32;
        Effect__PieceCaptured piece_captured = 33;
        Effect__PieceBumped piece_bumped = 36;
        Effect__PiecePromoted piece_promoted = 37;
        Effect__PieceDeployed piece_deployed = 34;
        Effect__PieceTransfer piece_transfer = 35;
        Effect__Win win = 40;
    }


    // Visual hints to help the frontend represent this effect.
    repeated VisualHint visual_hints = 100;
}

// Effect__NothingHappens is a no-op effect; used for timing placeholders, or for visual hints that don't correspond to game state changes.
message Effect__NothingHappens {}

// Effect__PieceCreated represents the creation of a new piece on the board.
// This is NOT equivalent to deployment, only when an entirely new piece is instantiated.
message Effect__PieceCreated {
    ChessPiece piece = 1;
}

// Effect__PieceDeleted represents the removal of a piece from the game entirely.
// This is NOT equivalent to capture, only when a piece is destroyed utterly somehow.
message Effect__PieceDeleted {
    string piece_uuid = 1;
}

// Effect__PieceMoved represents a piece moving from one position to another on the same board.
// If the piece's movement is due to a bump action, use PieceBumped instead.
message Effect__PieceMoved {
    string piece_uuid = 1;
    Vector vector = 2;
}

// Effect__PieceCaptured represents a piece being captured and moved to its board's graveyard zone.
message Effect__PieceCaptured {
    string piece_uuid = 1;
}

// Effect__PieceBumped represents a piece being bumped from one position to another on the same board.
// It is similar to Effect__PieceMoved, but specifically indicates that the piece was forced to move by another piece's action.
message Effect__PieceBumped {
    string piece_uuid = 1;
    Vector vector = 2;
}


// Effect__PiecePromoted represents a piece being promoted to a different kind (e.g., pawn to queen).
message Effect__PiecePromoted {
    string piece_uuid = 1;
    PieceKind to_kind = 2;
}

// Effect__PieceDeployed represents a piece being placed from the bench zone onto the board.
message Effect__PieceDeployed {
    string piece_uuid = 1;
    Position to_position = 2;
}

// Effect__PieceTransfer represents a full mutation of a piece's location (potentially across position, zone, and board).
// Do NOT use this for captures or deploys. Use it for handing off pieces between players' boards in bughouse, or similar.
message Effect__PieceTransfer {
    string piece_uuid = 1;

    string to_board_uuid = 2;
    ZoneKind to_zone = 3;
    Position to_position = 4;
}

// Effect__Win represents a player winning the game on a specific board.
message Effect__Win {
    string winning_player_uuid = 1;

}
